- rewritten the serialization to support the statements in the future and more manual control over the loading behaviour